# HyperMPC

./: .gitignore  100000G_100000MG_100In_50Out_100D_OutputOne10P.txt  100000G_100000MG_100In_50Out_20D_OutputOne10P.txt  100000G_100000MG_100In_50Out_20D_OutputOne10P.txtTimes0ZpMersenne61.csv  100000G_100000MG_100In_50Out_20D_OutputOne10P.txtTimes1ZpMersenne61.csv  100000G_100000MG_100In_50Out_20D_OutputOne10P.txtTimes2ZpMersenne61.csv  100000G_100000MG_100In_50Out_20D_OutputOne10P.txtTimes3ZpMersenne61.csv  100000G_100000MG_100In_50Out_20D_OutputOne10P.txtTimes4ZpMersenne61.csv  100000G_100000MG_100In_50Out_20D_OutputOne10P.txtTimes5ZpMersenne61.csv  100000G_100000MG_100In_50Out_20D_OutputOne10P.txtTimes6ZpMersenne61.csv  100000G_100000MG_100In_50Out_20D_OutputOne10P.txtTimes7ZpMersenne61.csv  100000G_100000MG_100In_50Out_20D_OutputOne10P.txtTimes8ZpMersenne61.csv  100000G_100000MG_100In_50Out_20D_OutputOne10P.txtTimes9ZpMersenne61.csv  100000G_100000MG_10In_50Out_100D_OutputOne100P.txt  100000G_100000MG_10In_50Out_20D_OutputOne100P.txt  100000G_100000MG_11In_50Out_100D_OutputOne90P.txt  100000G_100000MG_11In_50Out_20D_OutputOne90P.txt  100000G_100000MG_12In_50Out_100D_OutputOne80P.txt  100000G_100000MG_12In_50Out_20D_OutputOne80P.txt  100000G_100000MG_14In_50Out_100D_OutputOne70P.txt  100000G_100000MG_14In_50Out_20D_OutputOne70P.txt  100000G_100000MG_16In_50Out_100D_OutputOne60P.txt  100000G_100000MG_16In_50Out_20D_OutputOne60P.txt  100000G_100000MG_20In_50Out_100D_OutputOne50P.txt  100000G_100000MG_20In_50Out_20D_OutputOne50P.txt  100000G_100000MG_25In_50Out_100D_OutputOne40P.txt  100000G_100000MG_25In_50Out_20D_OutputOne40P.txt  100000G_100000MG_333In_50Out_20D_OutputOne3P.txt  100000G_100000MG_33In_50Out_100D_OutputOne30P.txt  100000G_100000MG_33In_50Out_20D_OutputOne30P.txt  100000G_100000MG_40In_50Out_20D_OutputOne50P.txt  100000G_100000MG_50In_50Out_100D_OutputOne20P.txt  100000G_100000MG_50In_50Out_20D_OutputOne20P.txt  100000G_100000MG_50In_50Out_20D_OutputOne40P.txt  100000G_100000MG_6In_50Out_20D_OutputOne150P.txt  100000G_100000MG_9In_50Out_100D_OutputOne110P.txt  100000G_100000MG_9In_50Out_20D_OutputOne110P.txt  10000G_10000MG_100In_50Out_100D_OutputOne10P.txt  10000G_10000MG_100In_50Out_20D_OutputOne10P.txt  10000G_10000MG_10In_50Out_100D_OutputOne100P.txt  (+131 more)
MATRIX/: run.sh
